// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLockedPlugins should return locked library items found in the sketchpack 1`] = `
Array [
  Object {
    "compatible_version": "0.0.0",
    "name": "managed-locked",
    "owner": "animaapp",
    "version": "1.0.0",
  },
]
`;

exports[`getManagedPlugins should return library items found in the sketchpack 1`] = `
Array [
  Object {
    "compatible_version": "0.0.0",
    "name": "managed-unlocked",
    "owner": "utom",
    "version": "2.0.0",
  },
  Object {
    "compatible_version": "0.0.0",
    "name": "managed-locked",
    "owner": "animaapp",
    "version": "1.0.0",
  },
]
`;

exports[`getReducedLibrary should return library items found in the sketchpack 1`] = `
Object {
  "animaapp/managed-locked": Object {
    "compatible_version": "0.0.0",
    "name": "managed-locked",
    "owner": "animaapp",
    "version": "1.0.0",
  },
  "author-beta/unmanaged": Object {
    "compatible_version": "0.0.0",
    "name": "unmanaged",
    "owner": "author-beta",
    "version": "1.0.0",
  },
  "utom/managed-unlocked": Object {
    "compatible_version": "0.0.0",
    "name": "managed-unlocked",
    "owner": "utom",
    "version": "2.0.0",
  },
}
`;

exports[`getUnlockedPlugins should return unlocked library items found in the sketchpack 1`] = `
Array [
  Object {
    "compatible_version": "0.0.0",
    "name": "managed-unlocked",
    "owner": "utom",
    "version": "2.0.0",
  },
]
`;

exports[`getUnmanagedPlugins should return library items NOT found in the sketchpack 1`] = `
Array [
  Object {
    "compatible_version": "0.0.0",
    "name": "unmanaged",
    "owner": "author-beta",
    "version": "1.0.0",
  },
]
`;
